--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="theme-color" content="">
+<meta name="google-site-verification" content="WF65J11fig2k0Nra6Mpwwm8QJzm29ZOPPk6xXtMkNsg" />
 <link rel="amphtml" href="https://judol303kuform.pages.dev/">
 <link rel="preload" href="https://judol303kuform.pages.dev/" as="amphtml">
 <link rel="canonical" href="http://ftp.codeinnpixels.com/">
